controller/test/e2e/features/agentgateway/a2a/testdata/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a2a-helloworld
  namespace: agentgateway-base
  labels:
    app: a2a-helloworld
spec:
  selector:
    matchLabels:
      app: a2a-helloworld
  template:
    metadata:
      labels:
        app: a2a-helloworld
        app.kubernetes.io/name: a2a-helloworld
    spec:
      containers:
        - name: a2a-rs-example
          image: ghcr.io/kgateway-dev/test-a2a-server:0.0.11 
          ports:
            - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: a2a-helloworld
  namespace: agentgateway-base
spec:
  selector:
    app: a2a-helloworld
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
      appProtocol: kgateway.dev/a2a
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a2a-route
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  rules:
    - backendRefs:
        - name: a2a-helloworld
          port: 9999
